# financial-categorizer

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  financial_messages.csv  fly.toml  label_encoder.joblib  main.py  pyproject.toml  start.sh
src/: __init__.py  download_model.py  inference.py  main.py  trainer.py
