[project]
name = "bertimbau"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=3.5.1",
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "transformers[torch]>=4.51.3",
]
